[gd_scene load_steps=7 format=2]

[ext_resource path="res://Weapons/AbstractWeapon.tscn" type="PackedScene" id=1]
[ext_resource path="res://Weapons/Sword.gd" type="Script" id=2]
[ext_resource path="res://DamageArea.tscn" type="PackedScene" id=3]
[ext_resource path="res://SFX/sword_throw.wav" type="AudioStream" id=4]
[ext_resource path="res://SFX/hurt_4.wav" type="AudioStream" id=5]
[ext_resource path="res://SFX/hurt_0.wav" type="AudioStream" id=6]

[node name="AbstractSword" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="DamageArea" parent="Body" index="0" instance=ExtResource( 3 )]

[node name="AttackTween" type="Tween" parent="." index="1"]

[node name="AttackSFX" type="AudioStreamPlayer" parent="." index="2"]
stream = ExtResource( 4 )
volume_db = -10.0
bus = "SFX"

[node name="PlayerHurt" type="AudioStreamPlayer" parent="." index="3"]
stream = ExtResource( 5 )
bus = "SFX"

[node name="EnemyHurt" type="AudioStreamPlayer" parent="." index="4"]
stream = ExtResource( 6 )
bus = "SFX"

[connection signal="entity_damaged" from="Body/DamageArea" to="." method="_on_DamageArea_entity_damaged"]
